# BreakoutGame

Code/: CMakeLists.txt  ReadMe.txt
Code/src/: bar.cpp  bar.hpp  circle.cpp  circle.hpp  main.cpp  mainwindow.ui  niveau.cpp  niveau.hpp  render_area.cpp  render_area.hpp  window.cpp  window.hpp
